--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <div class="exp1">
       <button class="accordion">管理學-銀髮協會志工</button>
       <div class="panel">
-        <img src="../assets/Images/管理學.jpg" class="img1">
+        <img src="assets/Images/管理學.jpg" class="img1">
         <p>大一上學期的管理學課程中，各組需選擇一個機構擔任志工，而我們這組選擇了銀髮族協會，主要工作內容為教導銀髮族們使用手機及推廣協會的App，
           目的是要讓銀髮族們更加熟悉手機的操作，也讓他們多一個管道可以詢問並練習。<br>
           <ul>
@@ -155,7 +155,7 @@
 
       <button class="accordion">企業概論-蜜豐糖脆蛋糕</button>
       <div class="panel">
-        <img src="../assets/Images/企概.jpg" class="img2">
+        <img src="assets/Images/企概.jpg" class="img2">
         <p>
           企業概論是一個從做中學的課程，從進貨、販賣商品、宣傳等，皆須自行實作，販賣的產品也結合了公益，讓我們在學習中也能做公益，對社會盡一份心力。而我們這組販賣的是微熱山丘的蜜豐糖脆蛋糕，脆蛋糕相對來說知名度較低且價格偏貴，所以在販賣過程中遇到了許多困難，但也是一個很棒的經驗。
           <ul>
@@ -167,7 +167,7 @@
 
       <button class="accordion">網路程式設計-購物網站後端</button>
       <div class="panel">
-        <img src="../assets/Images/網程.png" class="img3">
+        <img src="assets/Images/網程.png" class="img3">
         <p>與隔壁班合作寫出的一個巧克力購物網站，我們負責後端的程式，隔壁班則負責前端的程式，過程中遇到了許多問題，像是整合、跑版、功能無法執行等，
           在解決程式問題的過程中也得到了許多經驗和技能。
           <ul>
@@ -179,7 +179,7 @@
 
       <button class="accordion">多媒體程式設計-介紹中原通識活動網站</button>
       <div class="panel">
-        <img src="../assets/Images/多媒.png" class="img4">
+        <img src="assets/Images/多媒.png" class="img4">
         <p>多媒體課程的期中報告，我們這組選擇了中原大學通識活動來做行銷宣傳，讓大家有一個網站可以直接了解通識活動的資訊，
           透過這次的報告，讓我更加了解了網頁排版及CSS的應用。
           <ul>
