--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="box1">
     <div class="name">賴舒慈</div>
     <div class="a">中原大學 資訊管理學系</div>
-    <img src="../assets/Images/慈.jpg">
+    <img src="assets/Images/慈.jpg">
     <div class="infor">Birthday:2001/03/30<br>Phone:0966-321-118</div>
     <a href="https://www.instagram.com/sw_army_0330" class="b1">IG</a>
     <a href="https://www.facebook.com/profile.php?id=100000581931236" class="b2">FB</a>
