--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div class="a">中原大學 資訊管理學系</div>
     <img src="assets/Images/慈.jpg">
     <div class="infor">Birthday:2001/03/30<br>Phone:0966-321-118</div>
-    <a href="https://www.instagram.com/sw_army_0330" class="b1">IG</a>
-    <a href="https://www.facebook.com/profile.php?id=100000581931236" class="b2">FB</a>
-    <a href="mailto:fvswarmy@gmail.com" target="_blank" class="b3">Email</a>
+    <a href="https://www.instagram.com/sw_army_0330"><img src="assets/Images/ig.png" class="b1"></a>
+    <a href="https://www.facebook.com/profile.php?id=100000581931236"><img src="assets/Images/fb.png" class="b2"></a>
+    <a href="mailto:fvswarmy@gmail.com" target="_blank"><img src="assets/Images/mail.png" class="b3"></a>
   </div>
   <div class="box2">
     <div class="w3-panel w3-leftbar w3-sand">
