--- a/index.html
+++ b/index.html
@@ -28,36 +28,38 @@
     <table>
       <tr>
         <td>
-          <div class=" edu">
+          <div class=" edu">學歷 Education</div>
+          <div class=" edu1">
             <div class="edu2">
-              <h3><i class="edu3"></i>學歷 Education</h3>
-              <ul>
-                <li><span>雲林縣僑真國民小學</span><small>Ciao Jhen Elementary School</small></li>
-                <li><span>雲林縣立斗南高級中學附設國中部</span><small>Dounan Junior High School
-                  </small></li>
-                <li><span>雲林縣立斗南高級中學</span><small>Dounan Senior High School
-                  </small></li>
-                <li><span>中原大學</span><small>Chung Yuan Christian University
+              <i class="edu3">
+                <ul>
+                  <li>雲林縣僑真國民小學<small>Ciao Jhen Elementary School</small></li>
+                  <li>雲林縣立斗南高級中學附設國中部<small>Dounan Junior High School
+                    </small></li>
+                  <li>雲林縣立斗南高級中學<small>Dounan Senior High School
+                    </small></li>
+                  <li>中原大學<small>Chung Yuan Christian University
 
-                  </small></li>
-              </ul>
+                    </small></li>
+                </ul>
 
-        </td>
+
         <td>
-          <div class="cexp">
+          <div class="cexp">社團活動經歷 Club Experience</div>
+          <div class="cexp1">
             <div class="edu2">
-              <h3><i class="edu3"></i>社團活動經歷 Club Experience</h3>
-              <ul>
-                <li><span>斗南高中吉他社-副社長</span></li>
-                <li><span>中原大學跆拳社-資訊長</span></li>
-                <li><span>中原大學雲嘉會-副會長</span></li>
+              <i class="edu3">
+                <ul>
+                  <li>斗南高中吉他社-副社長</li>
+                  <li>中原大學跆拳社-資訊長</li>
+                  <li>中原大學雲嘉會-副會長</li>
 
-              </ul>
+                </ul>
         </td>
       </tr>
     </table>
-
   </div>
+
 
 
 
@@ -185,7 +187,7 @@
           <ul>
             <li>合作寫出通識活動網站</li>
             <li>CSS的應用</li>
-            <li><a href="https://swarmy0330.github.io/index.html">網站連結</a></li>
+            <li><a href="https://swarmy0330.github.io/index.html">中原通識活動</a></li>
           </ul>
         </p>
       </div>
