--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SHUCI</title>
-  <link rel="stylesheet" type="text/css" href="../assets/Css/index.css">
+  <link rel="stylesheet" type="text/css" href="assets/Css/index.css">
 
 </head>
 
@@ -13,11 +13,11 @@
   <div class="box1">
     <div class="name">賴舒慈</div>
     <div class="a">中原大學 資訊管理學系</div>
-    <img src="../assets/Images/慈.jpg">
+    <img src="assets/Images/慈.jpg">
     <div class="infor">Birthday:2001/03/30<br>Phone:0966-321-118</div>
-    <a href="https://www.instagram.com/sw_army_0330"><img src="../assets/Images/ig.png" class="b1"></a>
-    <a href="https://www.facebook.com/profile.php?id=100000581931236"><img src="../assets/Images/fb.png" class="b2"></a>
-    <a href="mailto:fvswarmy@gmail.com" target="_blank"><img src="../assets/Images/mail.png" class="b3"></a>
+    <a href="https://www.instagram.com/sw_army_0330"><img src="assets/Images/ig.png" class="b1"></a>
+    <a href="https://www.facebook.com/profile.php?id=100000581931236"><img src="assets/Images/fb.png" class="b2"></a>
+    <a href="mailto:fvswarmy@gmail.com" target="_blank"><img src="assets/Images/mail.png" class="b3"></a>
   </div>
   <div class="box2">
     <div class="w3-panel w3-leftbar w3-sand">
@@ -142,7 +142,7 @@
 
     </div>
     <div class="exp">經歷 Experience</div>
-    <img src="../assets/Images/管理學.jpg" class="img1">
+    <img src="assets/Images/管理學.jpg" class="img1">
     <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
       <div class="flipper">
 
@@ -161,7 +161,7 @@
         </figcaption>
       </div>
     </div>
-    <img src="../assets/Images/企概.jpg" class="img2">
+    <img src="assets/Images/企概.jpg" class="img2">
     <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
       <div class="flipper">
 
@@ -181,7 +181,7 @@
       </div>
     </div>
 
-    <img src="../assets/Images/網程.png" class="img3">
+    <img src="assets/Images/網程.png" class="img3">
     <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
       <div class="flipper">
 
@@ -202,7 +202,7 @@
         </figcaption>
       </div>
     </div>
-    <img src="../assets/Images/多媒.png" class="img4">
+    <img src="assets/Images/多媒.png" class="img4">
     <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
       <div class="flipper">
 
@@ -223,7 +223,7 @@
         </figcaption>
       </div>
     </div>
-    <a href="https://swarmy0330.github.io/index.html"><img src="../assets/Images/a.png" class="link"></a>
+    <a href="https://swarmy0330.github.io/index.html"><img src="assets/Images/a.png" class="link"></a>
     <script>
       var acc = document.getElementsByClassName("accordion");
       var i;
